@@ -1,11 +1,8 @@
-package tools.vitruv.compmodelcons.generator;
+package tools.vitruv.compmodelcons.generator.tools;
 
 import org.eclipse.emf.codegen.ecore.genmodel.*;
 import org.eclipse.emf.common.util.URI;
-import org.eclipse.emf.ecore.EClass;
-import org.eclipse.emf.ecore.EClassifier;
-import org.eclipse.emf.ecore.EPackage;
-import org.eclipse.emf.ecore.EStructuralFeature;
+import org.eclipse.emf.ecore.*;
 import org.eclipse.emf.ecore.plugin.EcorePlugin;
 import org.eclipse.emf.ecore.resource.Resource;
 import org.eclipse.emf.ecore.resource.ResourceSet;
@@ -16,12 +13,16 @@ public record Metamodel(EPackage ePackage, GenPackage genPackage) {
     public static Metamodel load(EPackage ePackage, ResourceSet resourceSet) {
         URI genModelUri = EcorePlugin.getEPackageNsURIToGenModelLocationMap(true).get(ePackage.getNsURI());
 
+        if (genModelUri == null) {
+            return null;
+        }
+
         if (genModelUri.isPlatformResource()) {
             genModelUri = EcorePlugin.resolvePlatformResourcePath(genModelUri.toPlatformString(true));
         }
 
         Resource resource = resourceSet.getResource(genModelUri, true);
-        GenModel loadedGenModel = (GenModel) resource.getContents().get(0);
+        GenModel loadedGenModel = (GenModel) resource.getContents().getFirst();
 
         GenModel reconciledGenModel = GenModelFactory.eINSTANCE.createGenModel();
         reconciledGenModel.initialize(List.of(ePackage));
@@ -51,6 +52,14 @@ public record Metamodel(EPackage ePackage, GenPackage genPackage) {
 
     public GenClass getGenClass(EClass eClass) {
         return (GenClass) getGenClassifier(eClass);
+    }
+
+    public GenEnum getGenEnum(String name) {
+        return (GenEnum) getGenClassifier(name);
+    }
+
+    public GenEnum getGenEnum(EEnum eEnum) {
+        return (GenEnum) getGenClassifier(eEnum);
     }
 
     public GenFeature getGenFeature(EClass eClass, String name) {
